# java-uef

./: .gitignore  CMakeLists.txt  build.gradle.kts  settings.gradle.kts
cbuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  JavaUEF.sln  JavaUEF.vcxproj  JavaUEF.vcxproj.filters  Uef.vcxproj  Uef.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
cbuild/Debug/: JavaUEF.exp  JavaUEF.lib
cbuild/JavaUEF.dir/Debug/: JavaUEF.dll.recipe  JavaUEF.ilk
cbuild/JavaUEF.dir/Debug/JavaUEF.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  JavaUEF.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
cbuild/Release/: Uef.exp  Uef.lib
cbuild/Uef.dir/Release/: Uef.dll.recipe
cbuild/Uef.dir/Release/Uef.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
cbuild/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
cbuild/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
cbuild/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
cbuild/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
cbuild/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
cbuild/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
cbuild/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
cbuild/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
java/src/main/net/rk4z/juef/: Ultralight.java
java/src/test/net/rk4z/juef/: Main.java
java/src/test/resources/: index.html
lib/: AppCore.dylib  Ultralight.dylib  UltralightCore.dylib  libUltralightCore.dylib
lib/ultralight-sdk-1.3.0-win-x64/: CMakeLists.txt
native/: Logger.cpp  Logger.hpp  UefApp.cpp  UefApp.h  UefApp.hpp  UefKeyEvent.cpp  UefKeyEvent.h  UefOverlay.cpp  UefOverlay.h  UefOverlay.hpp  UefPlatform.cpp  UefPlatform.hpp  UefRenderer.cpp  UefRenderer.hpp  UefView.cpp  UefView.hpp  UefWindow.cpp  UefWindow.h  UefWindow.hpp  Utils.cpp  Utils.hpp
native/src/: Uef.cpp
src/main/cpp/: JUEF.cpp  JUEFBitmap.cpp  JUEFClipboard.cpp  JUEFFileSystem.cpp  JUEFFontLoader.cpp  JUEFOverlay.cpp  JUEFRenderer.cpp  JUEFView.cpp  JUEFWindow.cpp
src/main/cpp/h/: JUEF.h  JUEFBitmap.h  JUEFFileSystem.h  JUEFFontLoader.h  JUEFOverlay.h  JUEFRenderer.h  JUEFWindow.h
src/main/java/net/rk4z/juef/: FaceWinding.java  FontHinting.java  JUEF.java  JUEFBitmap.java  JUEFClipboard.java  JUEFConfig.java  JUEFFileSystem.java  JUEFFontLoader.java  JUEFLogger.java  JUEFOverlay.java  JUEFRenderer.java  JUEFSession.java  JUEFSettings.java  JUEFSurface.java  JUEFView.java  JUEFWindow.java  Uef.java  UefApp.java  UefConfig.java  UefOverlay.java  UefPlatform.java  UefRenderer.java  UefSession.java  UefSettings.java  UefView.java  (+2 more)
(+19 files in other folders)
